--- a/.simulation/intro_trySimulation.Rmd
+++ b/.simulation/intro_trySimulation.Rmd
@@ -1,20 +1,297 @@
 ---
 title: "R로 package 만들어서 Simulation 하기"
-output: ioslides_presentation
+output: 
+  ioslides_presentation:
+    css: slides.css
+transition: none
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = T)
+library(tidyverse)
+library(knitr)
+library(kableExtra)
+
+root <- rprojroot::find_rstudio_root_file()
+report_path <- file.path(root, ".simulation")
+
+load(file.path(report_path, "results.rdata"))
 ```
 
 
 ## Content
 
-- 패키지 만들기
+- 시뮬레이션을 위한 패키지 만들기기
+- git(hub)
+- 시뮬레이션 분석
+- 사용할 package
+  - tidyverse
+    - dplyr, tidyr, ggplot2, purrr, magrittr
+  - lavaan
+
+## Package for Simulation
+
+- 엄청 큰 장점은 없음
+- 같이 배우면 좋을 거 같음
+- 연구 보관이 용이함.
+  - 언제든지 다시 하거나, 수정하기 쉬움
+- 패키지 자체가 연구인 경우
+
 
 ## Simulation
 
+- 시뮬레이션에 필요한 거
+  - 주제
+  - 시뮬레이션 조건 함수
+  - 데이터 생성 함수
+  - 분석 함수
+  - 정리 함수
+
+## 주제
+
+연속형 변수를 범주화 해서 분석하면 얼마나 위험할까?
 
 
 
+## 시뮬레이션 조건 함수
+
+```{r}
+makeCondition <- function(n_sample, cov_size, n_indi, cut_size, n_rep, 
+                          full = T) {
+  con_list <-
+    crossing(n_sample, cov_size, n_indi, cut_size) %>%
+    mutate(condition_number = row_number())
+
+  if(full)
+    con_list <- crossing(con_list, n_rep = 1:n_rep) %>% arrange(n_rep, condition_number)
+
+  return(con_list)
+}
+
+condition_list <- 
+  makeCondition(
+    n_sample = c(100, 500), cov_size = c(0, 0.5), n_indi = c(3, 6), 
+    cut_size = c(3,5,7), n_rep = 5, full = F)
+
+condition_list
+```
+
+
+## 데이터 생성 함수
+
+```{r}
+genData <- function(N, cov_size, n_indi) {
+
+  # factor_loadings <- matrix(
+  #   c(1,0,
+  #     1,0,
+  #     1,0,
+  #     0,1,
+  #     0,1,
+  #     0,1 ),
+  #   ncol = 2
+  # )
+
+  factor_loadings <- matrix(
+    c(rep(c(1,0), n_indi), rep(c(0,1), n_indi)),
+    ncol = 2,
+    byrow = T
+  )
+
+  latent_matrix <- matrix(
+    c(1, cov_size,
+      cov_size, 1),
+    ncol = 2
+  )
+
+  error_terms <- diag(0.5, n_indi*2)
+
+  model_impled <- 
+    factor_loadings %*% latent_matrix %*% t(factor_loadings) + error_terms
+
+
+  mean_vector <- rep(0, n_indi*2)
+
+  g.data <- MASS::mvrnorm(N, mean_vector, Sigma = model_impled)
+  g.data <- data.frame(g.data)
+  return(g.data)
+  }
+
+# .data <- genData(N = 100, cov_size = 0, n_indi = 3)
+```
+
+
+```{r}
+dataCut <- function(.data, cut_size) {
+
+  # cut(x = .data[,1], breaks = cut_size, labels = F)
+
+  cut.data <- 
+    apply(.data, 2, function(x) cut(x = x, breaks = cut_size, labels = F))
+
+  cut.data <- data.frame(cut.data)
+
+  return(cut.data)
+}
+```
+
+
+
+
+## 분석 함수
+
+```{r}
+analysis <- function(.data) {
+
+  n_indi <- dim(.data)[2]/2
+
+  for_f1 <- paste0("X", 1:n_indi)
+  for_f2 <- paste0("X", (n_indi+1):(2*n_indi))
+
+  for_f1 <- paste(for_f1, collapse = " + ")
+  for_f2 <- paste(for_f2, collapse = " + ")
+
+  .model <- glue('
+      F1 =~ {for_f1}
+      F2 =~ {for_f2}
+
+      F1 ~~ F2
+  ')
+
+  .fit <- lavaan::sem(model = .model,
+                      data  = .data )
+
+  # summary(.fit)
+  return(.fit)
+  }
+```
+
+
+
+## 정리 함수
+
+```{r}
+getEst <- function(.fit) {
+
+  parameterestimates(.fit) %>%
+    filter(str_detect(op, "=~") | str_detect(lhs, "F1|F2")) %>%
+    filter(se != 0) %>%
+    mutate(type = paste0(lhs, op, rhs)) %>%
+    dplyr::select(type, est, pvalue)
+}
+
+```
+
+
+## 통합(?) 시뮬레이션 함수
+
+```{r}
+runSimulation <- function(condition_full) {
+
+  total_n <- dim(condition_full)[1]
+
+  res <- vector("list", total_n)
+  for(tn in 1:total_n) {
+
+    n_sample         <- condition_full$n_sample[tn]
+    cov_size         <- condition_full$cov_size[tn]
+    n_indi           <- condition_full$n_indi[tn]
+    cut_size         <- condition_full$cut_size[tn]
+    condition_number <- condition_full$condition_number[tn]
+    n_rep            <- condition_full$n_rep[tn]
+
+    original.data <- 
+      genData(N = n_sample, cov_size = cov_size, n_indi = n_indi)
+    cut.data <- dataCut(original.data, cut_size)
+
+    .fit <- analysis(cut.data)
+
+    est <- getEst(.fit)
+
+    res[[tn]] <- cbind(condition_full[tn, ], est)
+    }
+
+  res <- do.call('rbind', res)
+  return(res)
+}
+```
+
+## 결과 정리 함수
+
+```{r}
+getPower <- function(results) {
+  results %>%
+    filter(str_detect(type, "F1~~F2")) %>%
+    mutate(rate = if_else(pvalue < 0.05, 1, 0)) %>%
+    group_by(n_sample, cov_size, n_indi, cut_size) %>%
+    summarise(mean_rate = mean(rate))
+}
+
+# power_res <- getPower(sim_result)
+
+#' get bias and rmse data
+#' @export
+getBias <- function(results) {
+  results %>%
+    mutate(pop_value = case_when(cov_size == 0 & type == "F1~~F2" ~ 0,
+                                 cov_size == 0.5 & type == "F1~~F2" ~ 0.5,
+                                 TRUE ~ 1),
+           type = case_when(str_detect(type, "=~") ~ "factor_loading",
+                            type == "F1~~F2" ~ "latent_cov",
+                            TRUE ~ "latent_var")) %>%
+    group_by(n_sample, cov_size, n_indi, cut_size, type) %>%
+    summarise(
+      Bias = mean(est - pop_value),
+      RMSE = sqrt( mean((est - pop_value)^2) )
+    )
+}
+```
+
+```{r}
+makePlot <- function(results, what = "RMSE", font_size) {
+
+  if(what == "RMSE" | what == "Bias" ) {
+    results %>%
+      filter(cov_size != 0) %>%
+      mutate_at(vars(matches("_")), as.factor) %>%
+      ggplot(aes(x = cut_size, y = !!as.name(what))) +
+      geom_point(aes(colour = n_sample), size = 2, alpha = 0.8) +
+      facet_grid(type ~ n_indi) +
+      theme_bw(base_size = font_size)
+
+  } else {
+    if(tolower(what) == "power") {
+      results %>%
+        filter(cov_size != 0) %>%
+        mutate_at(vars(matches("_")), as.factor) %>%
+        ggplot(aes(x = cut_size, y = mean_rate)) +
+        geom_point(aes(colour = n_sample), size = 2, alpha = 0.8) +
+        facet_grid(. ~ n_indi) +
+        theme_bw(base_size = font_size)
+
+    } else {
+      results %>%
+        filter(cov_size == 0) %>%
+        mutate_at(vars(matches("_")), as.factor) %>%
+        ggplot(aes(x = cut_size, y = mean_rate)) +
+        geom_point(aes(colour = n_sample), size = 2, alpha = 0.6) +
+        facet_grid(n_indi ~ .) +
+        theme_bw(base_size = font_size)
+    }
+  }
+}
+```
+
+
+```{r}
+makePlot(bias_res, what = "RMSE", font_size = 12)
+```
+
+```{r}
+makePlot(power_res, what = "power", font_size = 12)
+```
+
+```{r}
+makePlot(power_res, what = "typeIerror", font_size = 12)
+```
 
