--- a/.simulation/intro_trySimulation.Rmd
+++ b/.simulation/intro_trySimulation.Rmd
@@ -3,14 +3,18 @@ title: "R로 package 만들어서 Simulation 하기"
 output: 
   ioslides_presentation:
     css: slides.css
-transition: none
+    widescreen: true
+    transition: faster
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = T)
+knitr::opts_chunk$set(echo = T, fig.width=8, fig.height=6)
 library(tidyverse)
 library(knitr)
 library(kableExtra)
+library(psych)
+library(trySimulation)
+library(glue)
 
 root <- rprojroot::find_rstudio_root_file()
 report_path <- file.path(root, ".simulation")
@@ -51,6 +55,10 @@ load(file.path(report_path, "results.rdata"))
 
 연속형 변수를 범주화 해서 분석하면 얼마나 위험할까?
 
+```{r echo=FALSE, fig.align="center", out.height = "200%"}
+include_graphics(file.path(report_path, "model_fig.png"))
+```
+
 
 
 ## 시뮬레이션 조건 함수
@@ -63,7 +71,9 @@ makeCondition <- function(n_sample, cov_size, n_indi, cut_size, n_rep,
     mutate(condition_number = row_number())
 
   if(full)
-    con_list <- crossing(con_list, n_rep = 1:n_rep) %>% arrange(n_rep, condition_number)
+    con_list <- 
+      crossing(con_list, n_rep = 1:n_rep) %>% 
+      arrange(n_rep, condition_number)
 
   return(con_list)
 }
@@ -79,18 +89,94 @@ condition_list
 
 ## 데이터 생성 함수
 
+$$\Sigma = Cov(X) = \Lambda \Phi \Lambda^T + \Theta$$
+```{r echo=FALSE, out.height = "60%", fig.align="center"}
+include_graphics(file.path(report_path, "model_fig.png"))
+```
+
+```{r echo=FALSE}
+factor_loadings <- matrix(
+    c(rep(c(1,0), 3), rep(c(0,1), 3)),
+    ncol = 2,
+    byrow = T
+  )
+
+  latent_matrix <- matrix(
+    c(1, 0.5,
+      0.5, 1),
+    ncol = 2
+  )
+
+  error_terms <- diag(0.5, 3*2)
+
+  model_impled <- 
+    factor_loadings %*% latent_matrix %*% t(factor_loadings) + error_terms
+  
+  model_impled
+```
+
+------------------
+
+
+```{r}
+n_indi <- 3
+
+  factor_loadings <- matrix(
+    c(rep(c(1,0), n_indi), rep(c(0,1), n_indi)),
+    ncol = 2,
+    byrow = T
+  )
+
+factor_loadings
+```
+
+```{r}
+cov_size <- 0.5
+
+ latent_matrix <- matrix(
+    c(1, cov_size,
+      cov_size, 1),
+    ncol = 2
+  )
+ latent_matrix
+```
+
+```{r}
+
+error_terms <- diag(0.5, n_indi*2)
+
+error_terms
+```
+
+```{r}
+  model_impled <- 
+    factor_loadings %*% latent_matrix %*% t(factor_loadings) + error_terms
+
+model_impled
+```
+
+```{r}
+mean_vector <- rep(0, n_indi*2)
+mean_vector
+```
+  
+```{r}
+N <- 100
+g.data <- MASS::mvrnorm(N, mean_vector, Sigma = model_impled)
+  
+g.data <- data.frame(g.data)
+head(g.data, 5)
+
+cov(g.data)
+
+model_impled
+```
+
+-----------------
+
+
 ```{r}
 genData <- function(N, cov_size, n_indi) {
-
-  # factor_loadings <- matrix(
-  #   c(1,0,
-  #     1,0,
-  #     1,0,
-  #     0,1,
-  #     0,1,
-  #     0,1 ),
-  #   ncol = 2
-  # )
 
   factor_loadings <- matrix(
     c(rep(c(1,0), n_indi), rep(c(0,1), n_indi)),
@@ -116,15 +202,24 @@ genData <- function(N, cov_size, n_indi) {
   g.data <- data.frame(g.data)
   return(g.data)
   }
+```
 
-# .data <- genData(N = 100, cov_size = 0, n_indi = 3)
+-----------
+
+### 리커트 척도 만들기기
+
+```{r}
+.data <- genData(N = 10, cov_size = 0, n_indi = 3)
+
+(x <- .data[,1])
+(cut_size <- 5)
+cut(x = x, breaks = cut_size, labels = F)
+
 ```
 
 
 ```{r}
 dataCut <- function(.data, cut_size) {
-
-  # cut(x = .data[,1], breaks = cut_size, labels = F)
 
   cut.data <- 
     apply(.data, 2, function(x) cut(x = x, breaks = cut_size, labels = F))
@@ -137,8 +232,59 @@ dataCut <- function(.data, cut_size) {
 
 
 
-
 ## 분석 함수
+
+### lavaan 패키지
+
+```{r}
+.data <- genData(N = 300, cov_size = 0.5, n_indi = 3)
+
+.model <- '
+      F1 =~ X1 + X2 + X3 
+      F2 =~ X4 + X5 + X6
+
+      F1 ~~ F2
+  '
+```
+
+lavaan / mplus
+
+`=~` = `by`
+
+`~~` = `with`
+
+`~`  = `on`
+
+
+```{r}
+.fit <- lavaan::sem(model = .model,
+                      data  = .data )
+summary(.fit, fit.measures=TRUE)
+```
+
+-------------
+
+```{r}
+
+  (dim(.data))
+
+  n_indi <- dim(.data)[2]/2
+
+  (for_f1 <- paste0("X", 1:n_indi))
+  (for_f2 <- paste0("X", (n_indi+1):(2*n_indi)))
+
+  (for_f1 <- paste(for_f1, collapse = " + "))
+  (for_f2 <- paste(for_f2, collapse = " + "))
+
+  .model <- glue('
+      F1 =~ {for_f1}
+      F2 =~ {for_f2}
+
+      F1 ~~ F2
+  ')
+```
+
+--------------
 
 ```{r}
 analysis <- function(.data) {
@@ -167,7 +313,6 @@ analysis <- function(.data) {
 ```
 
 
-
 ## 정리 함수
 
 ```{r}
@@ -183,7 +328,7 @@ getEst <- function(.fit) {
 ```
 
 
-## 통합(?) 시뮬레이션 함수
+## 통합 시뮬레이션 함수
 
 ```{r}
 runSimulation <- function(condition_full) {
@@ -227,10 +372,6 @@ getPower <- function(results) {
     summarise(mean_rate = mean(rate))
 }
 
-# power_res <- getPower(sim_result)
-
-#' get bias and rmse data
-#' @export
 getBias <- function(results) {
   results %>%
     mutate(pop_value = case_when(cov_size == 0 & type == "F1~~F2" ~ 0,
@@ -282,14 +423,25 @@ makePlot <- function(results, what = "RMSE", font_size) {
 }
 ```
 
+## 결과
+
+### RMSE
 
 ```{r}
 makePlot(bias_res, what = "RMSE", font_size = 12)
 ```
 
+-----------
+
+### Power
+
 ```{r}
 makePlot(power_res, what = "power", font_size = 12)
 ```
+
+-------------
+
+### Type I error
 
 ```{r}
 makePlot(power_res, what = "typeIerror", font_size = 12)
