--- a/.simulation/report.rmd
+++ b/.simulation/report.rmd
@@ -4,7 +4,7 @@ author: ""
 date: '`r Sys.Date()`'
 output:
   html_document:
-    css: "style.css"
+    css: "css/style.css"
     code_folding: hide
     toc: true
     toc_depth: 2
